# Auto-Parts-App-2026

./: .gitignore  CLAUDE.md  FISHER SKP INTERCHANGE 20260302.BACKUP.xlsx  FISHER SKP INTERCHANGE 20260302.EMERGENCY.1245.xlsx  FISHER SKP INTERCHANGE 20260302.xlsx  IMPLEMENTATION_ROADMAP.md  PHASE_1_IMPLEMENTATION_COMPLETE.md  PHASE_B_COMPLETE.md  Parts Agent Pro.bat  UNIFIED_GUI_README.md  check_image_availability.py  create_shortcut.ps1  debug_gmb.py  debug_uncertain.py  demo_phase1_complete.py  deploy_wave2.py  deployment_dashboard.py  deployment_metrics.json  main_app.py  monitor_anchor.py  monitor_production.py  monitor_wave1.py  production_plan.md  pyproject.toml  test_ai.py  test_image_analysis_working.py  test_scraper.py  test_specific_row.py  track_deployment_metrics.py
.claude/: settings.local.json
config/: production_settings.json
data/: parts_agent.db
docs/: ARCHITECTURE.md  OPERATIONS.md  TROUBLESHOOTING.md  progress.md
output/: anchor_enhanced_batch1.txt  anchor_image_smoke.txt  anchor_image_test3.txt  anchor_images_batch.txt  anchor_images_batch1.txt  anchor_images_batch50.txt  anchor_images_continue.txt  anchor_images_continued.txt  anchor_images_final.txt  anchor_images_large1.txt  anchor_images_large2.txt  anchor_images_optimized.txt  anchor_images_optimized2.txt  anchor_images_prod.txt  anchor_images_test.txt  anchor_images_ultra1.txt  anchor_images_ultra2.txt  anchor_main_optimized.txt  anchor_uncertain.txt  dorman_batch_600plus.txt  dorman_images.txt  dorman_images_optimized.txt  dorman_offscreen_test.txt  dorman_optimized.txt  gmb_batch.txt  (+34 more)
(+122 files in other folders)
