[project]
name = "parts-agent"
version = "0.1.0"
description = "Automated auto parts matching agent"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.49.0",
    "openpyxl>=3.1.5",
    "anthropic>=0.49.0",
    "playwright-stealth>=2.0.2",
    "firecrawl-py>=4.19.0",
    "google-genai>=1.0.0",
    "opencv-python>=4.13.0.92",
    "pillow>=12.1.1",
    "imagehash>=4.3.2",
    "numpy>=2.4.3",
    "scikit-image>=0.24.0",
    "torch>=1.7.0",
    "torchvision>=0.8.0",
    "ftfy",
    "regex",
    "psutil>=7.2.2",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
    "flask>=3.1.3",
    "flask-socketio>=5.6.1",
    "requests>=2.32.5",
    "schedule>=1.2.2",
]

[tool.uv]
dev-dependencies = []
